Improve upload step in workflow with lftp options
Enhanced the upload step in the GitHub Actions workflow to include additional options for the lftp command.

--- a/.github/workflows/upload.yml
+++ b/.github/workflows/upload.yml
@@ -5,10 +5,21 @@ on:
     branches:
       - main
 jobs:
-  check-bats-version:
+  upload:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v6
     - run: sudo apt install lftp
     - name: "Upload"
-      run: lftp -u "${{ secrets.FTP_USER }}","${{ secrets.FTP_PASSWORD }}" "${{ secrets.FTP_HOST }}" -e "set ssl:verify-certificate no; mirror -R . /; quit"
+      run: |
+        lftp -u "${{ secrets.FTP_USER }}","${{ secrets.FTP_PASSWORD }}" "${{ secrets.FTP_HOST }}" \
+          -e "set ssl:verify-certificate no; \
+              set cmd:fail-exit yes; \
+              mirror -R \
+                --delete \
+                --continue \
+                --verbose \
+                --exclude .git/ \
+                --exclude .github/ \
+                . /; \
+              quit"
