Try ignore time for lftp

--- a/.github/workflows/upload.yml
+++ b/.github/workflows/upload.yml
@@ -19,6 +19,7 @@ jobs:
                 --delete \
                 --continue \
                 --verbose \
+                --ignore-time \
                 --exclude .git/ \
                 --exclude .github/ \
                 . /; \
