--- a/.github/workflows/upload.yml
+++ b/.github/workflows/upload.yml
@@ -4,6 +4,9 @@ on:
   push:
     branches:
       - main
+concurrency:
+  group: upload-${{ github.ref }}
+  cancel-in-progress: true
 jobs:
   upload:
     runs-on: ubuntu-latest
